Fix hidden title adding scrollbar

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -96,6 +96,7 @@ body > nav li + li a {
 			    margin-right: auto;
 			    max-width: 1200px;
 			    height: 133px;
+                overflow: hidden;
 
 				#logo{
 					margin-top: 3px;
